syntax = "proto3";

option csharp_namespace = "Contracts.Protos";

package book;

service BookProtoService {
  rpc GetBookById (BookRequest) returns (BookResponse);
  rpc GetAllBooks (Empty) returns (BooksResponse);
}

message BookRequest {
  int32 id = 1;
}

message Empty {}

message BookResponse {
  int32 id = 1;
  string title = 2;
  string author = 3;
  int32 year = 4;
  double price = 5;
}

message BooksResponse {
  repeated BookResponse books = 1;
}